Basic quiz and dog photo stretching fix

--- a/src/Dogs.css
+++ b/src/Dogs.css
@@ -56,7 +56,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
   } 
-  
+
   .Dog-details:after {
     content: '';
     flex: auto;
@@ -79,6 +79,7 @@
         height: 265px;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
+        object-fit: cover;
       }
       
       .Dog-info {
